added lacking steps for result checker and announcer